@@ -2,19 +2,19 @@
 Imports System.Reflection
 Imports System.Runtime.InteropServices
 
-' General Information about an assembly is controlled through the following 
+' General Information about an assembly is controlled through the following
 ' set of attributes. Change these attribute values to modify the information
 ' associated with an assembly.
 
 ' Review the values of the assembly attributes
-<Assembly: AssemblyTitle("DotNetNuke Reports Module")> 
-<Assembly: AssemblyDescription("DotNetNuke Reports Module")> 
-<Assembly: AssemblyCompany("DotNetNuke Corporation")> 
+<Assembly: AssemblyTitle("DotNetNuke Reports Module")>
+<Assembly: AssemblyDescription("DotNetNuke Reports Module")>
+<Assembly: AssemblyCompany("DotNetNuke Corporation")>
 <Assembly: AssemblyProduct("http://www.dotnetnuke.com")>
 <Assembly: AssemblyCopyright("DotNetNuke Reports Module is copyright 2002-2016 by DotNetNuke Corporation. All Rights Reserved")>
-<Assembly: AssemblyTrademark("DotNetNuke")> 
+<Assembly: AssemblyTrademark("DotNetNuke")>
 
-<Assembly: ComVisible(False)> 
+<Assembly: ComVisible(False)>
 
 'The following GUID is for the ID of the typelib if this project is exposed to COM
 <Assembly: Guid("334e9cee-0d47-4d70-924b-b5098a3432cb")>
@@ -22,16 +22,16 @@ Imports System.Runtime.InteropServices
 ' Version information for an assembly consists of the following four values:
 '
 '      Major Version
-'      Minor Version 
+'      Minor Version
 '      Build Number
 '      Revision
 '
-' You can specify all the values or you can default the Build and Revision Numbers 
+' You can specify all the values or you can default the Build and Revision Numbers
 ' by using the '*' as shown below:
-' <Assembly: AssemblyVersion("1.0.*")> 
+' <Assembly: AssemblyVersion("1.0.*")>
 
-<Assembly: AssemblyVersion("5.8.0.0")>
-<Assembly: AssemblyFileVersion("5.8.0.0")>
-<Assembly: WebResource("dnn.reports.js", "text/javascript")> 
-<Assembly: WebResource("CssForm.css", "test/css")> 
-<Assembly: WebResource("CssForm.debug.css", "text/css")> 
+<Assembly: AssemblyVersion("5.7.2.0")>
+<Assembly: AssemblyFileVersion("5.7.2.0")>
+<Assembly: WebResource("dnn.reports.js", "text/javascript")>
+<Assembly: WebResource("CssForm.css", "test/css")>
+<Assembly: WebResource("CssForm.debug.css", "text/css")>
